--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <!-- Link stylesheet -->
+    <link rel="stylesheet" href="hw5styling.css">
+    <title>hw-05</title>
+    <!-- Include D3 library in head -->
+    <script src='js/d3.v6.1.1/d3.min.js'></script>
 </head>
 
 
 <body>
+    <div class="h1">
+        <h1>hw-05: Interactive Graph with D3</h1>
+    </div>
 
+    
+    <div class="column left">
+        <div id="vis1"></div>
+
+    </div>
+    <div class="column right">
+
+        
+    </div>
+
+    <script src='js/hw5main.js'></script>
 
 </body>
 
