--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <div class="column left">
         <div id="vis1"></div>
+        <div id="vis2"></div>
 
     </div>
     <div class="column right">
